feat: content/book/7/1, 2, 3

--- a/content/book/7/7.1.md
+++ b/content/book/7/7.1.md
@@ -18,7 +18,7 @@ metaDescription: '7.1. Цикл, итерация, рекурсия'
 
 **Цикл, итерация, рекурсия**. В главе 3.7 мы уже обсуждали «хорошие» и  «плохие» циклы. «Хороший цикл» состоит из независимых частей и его тело не влияет на условия его выполнения. Еще более тесно связаны между собой части итерационного цикла – в нем результат текущего шага зависит от нескольких предыдущих. Здесь мы имеем последовательность взаимосвязанных шагов. Аналогично можно ввести понятие последовательности (а также и разветвляющейся последовательности) алгоритмов (функций), в которой каждый шаг (алгоритм) определяет начальные условия выполнения аналогичных алгоритмов и использует их результаты. Это и есть определение рекурсии.
 
-Рекурсивным называется способ построения объекта (понятия, системы, описание действия), в котором определение объекта включает аналогичные объекты (понятие, систему, действие) в виде составных  частей.
+>Рекурсивным называется способ построения объекта (понятия, системы, описание действия), в котором определение объекта включает аналогичные объекты (понятие, систему, действие) в виде составных  частей.
 
 ## Рекурсия в жизни, литературе, искусстве
 Примеры рекурсии можно встретить в литературе, искусстве, фольклоре.
@@ -34,16 +34,22 @@ metaDescription: '7.1. Цикл, итерация, рекурсия'
 
 «У попа была собака...»» (Детская считалка) <br/>
 <br/>
+</pre>
 
+<pre>
 Я хочу Вам написать, что я хочу Вам написать, что я хочу Вам написать ... <br/>
 
 (из письма пациента психиатру) <br/>
 <br/>
+</pre>
 
+<pre>
 «Я знаю, что ты знаешь, что я знаю» <br/> 
 (кинокомедия Альберто Сорди, Италия, 1982). <br/>
  <br/>
+</pre>
 
+<pre>
 «Я оглянулся посмотреть,<br/>
 
 не оглянулась ли она,<br/>
@@ -53,11 +59,11 @@ metaDescription: '7.1. Цикл, итерация, рекурсия'
 (Максим .Леонидов, «Девочка-видение», песня).<br/>
 </pre>
 
-В тамбуре, пуская дым в окошко, Монахов на некоторое время обрел пространство: мусорный ящик, огнетушитель, декларация какая-то под стеклом, дверь в туалет, плевок – все на месте. Давно пора было закурить… подчеркнуто выпустил дым – отлегло. Что это все на него находит? Благожелательно приласкал взглядом огнетушитель: на месте, друг! Не действуешь?.. И то, что на огнетушителе была картинка, на которой человек, успев переодеться в комбинезон, правильно держал в руках точно такой же огнетушитель, на котором, в свою очередь, была картинка, на которой… это, с детства запавшее представление, тут же тысячу раз проигранное в мозгу, не было почему-то ему противно, наоборот: усмехнулся себе ласково, будто подмигнул прошлому… (Андрей Битов. “Вкус”).
+В тамбуре, пуская дым в окошко, Монахов на некоторое время обрел пространство: мусорный ящик, огнетушитель, декларация какая-то под стеклом, дверь в туалет, плевок – все на месте. Давно пора было закурить… подчеркнуто выпустил дым – отлегло. Что это все на него находит? Благожелательно приласкал взглядом огнетушитель: на месте, друг! Не действуешь?.. И то, что на огнетушителе была картинка, на которой человек, успев переодеться в комбинезон, правильно держал в руках точно такой же огнетушитель, на котором, в свою очередь, была картинка, на которой… это, с детства запавшее представление, тут же тысячу раз проигранное в мозгу, не было почему-то ему противно, наоборот: усмехнулся себе ласково, будто подмигнул прошлому… (**Андрей Битов. “Вкус”**).
 
 Все образные примеры рекурсии подмечают главное ее свойство: некоторая часть системы воспроизводит самое себя. Здесь же отмечается особенность такого подхода: рекурсия не свойственна обыденному восприятию, безусловная рекурсия бесконечна и бессмысленна. Ограниченная рекурсия с определенным количеством уровней – парадоксальна и опасна. Например, рефлексия (от лат. reflexio – обращение назад) – самопознание, самонаблюдение, образное представление самого себя в третьем лице (см., например, «Поединок» А.Куприна).
 
-Примеры рекурсии можно обнаружить математике. Например, рекуррентные соотношения определяют (вычисляют) некоторый элемент последовательности через несколько предыдущих.
+Примеры рекурсии можно обнаружить математике. Например, **рекуррентные соотношения** определяют (вычисляют) некоторый элемент последовательности через несколько предыдущих.
 
 В программировании таких примеров еще больше:
 
@@ -88,7 +94,6 @@ int fact(int n) {
 ```
 
 Приведенный пример не демонстрирует каких-то особенных преимуществ линейной рекурсии. Тем не менее, линейная рекурсия элегантно смотрится на линейных структурах данных – односвязных списках.
-
  
 ```c
 //--- Включение в односвязный с сохранением порядка – циклическая программа
@@ -121,7 +126,7 @@ void InsSort(list *&ph, int v) {
 
 Особенность включения в односвязный список – указатель на новый элемент должен быть помещен в предыдущий элемент списка, указатель на который программа должна «помнить». Рекурсия позволяет использовать ссылку на указатель для любого элемента списка.
 
-Другая, еще не отмеченная особенность: наряду с линейной рекурсией, когда  определение объекта включает в себя единственный аналогичный объект, существует еще и ветвящаяся рекурсия, когда таких включаемых объектов несколько. Для рекурсивных функций это выглядит как два и более отдельных вызова функцией самой себя, либо как рекурсивный вызов функции в цикле.
+Другая, еще не отмеченная особенность: наряду с **линейной** рекурсией, когда  определение объекта включает в себя единственный аналогичный объект, существует еще и **ветвящаяся** рекурсия, когда таких включаемых объектов несколько. Для рекурсивных функций это выглядит как два и более отдельных вызова функцией самой себя, либо как рекурсивный вызов функции в цикле.
 
 ```c 
 //---- Ветвящаяся рекурсия
@@ -138,8 +143,7 @@ void F2() {
 
 Все приведенные выше литературно-художественные примеры имеют отношение к линейной рекурсии. Для ветвящейся рекурсии есть только одна физическая аналогия – цепная реакция: каждый рекурсивный вызов порождает n себе подобных. В структурах данных аналогичная «конструкция» называется деревом.
 
-Особенности работы рекурсивной функции. Рекурсивные функции лишь на первый взгляд выглядят как обычные фрагменты программ. Чтобы ощутить их специфику, достаточно мысленно проследить по тексту программы процесс ее выполнения. В обычной программе мы будем следовать по цепочке вызовов функций, но ни разу повторно не войдем в один и тот же фрагмент, пока из него не вышли. Можно сказать, что процесс выполнения программы  «ложится» однозначно на текст программы. Другое дело - рекурсия. Если попытаться отследить по тексту программы процесс ее выполнения, то мы придем к такой ситуации: войдя в рекурсивную функцию F, мы «движемся» по ее тексту до тех пор, пока не встретим ее вызова, после чего мы опять начнем выполнять ту же самую функцию сначала. При этом следует отметить самое важное свойство рекурсивной функции - ее первый вызов еще не закончился. Чисто внешне создается впечатление, что текст функции воспроизводится (копируется) всякий раз, когда функция сама себя вызывает:
-
+**Особенности работы рекурсивной функции**. Рекурсивные функции лишь на первый взгляд выглядят как обычные фрагменты программ. Чтобы ощутить их специфику, достаточно мысленно проследить по тексту программы процесс ее выполнения. В обычной программе мы будем следовать по цепочке вызовов функций, но ни разу повторно не войдем в один и тот же фрагмент, пока из него не вышли. Можно сказать, что процесс выполнения программы  «ложится» однозначно на текст программы. Другое дело - рекурсия. Если попытаться отследить по тексту программы процесс ее выполнения, то мы придем к такой ситуации: войдя в рекурсивную функцию F, мы «движемся» по ее тексту до тех пор, пока не встретим ее вызова, после чего мы опять начнем выполнять ту же самую функцию сначала. При этом следует отметить самое важное свойство рекурсивной функции - ее первый вызов еще не закончился. Чисто внешне создается впечатление, что текст функции воспроизводится (копируется) всякий раз, когда функция сама себя вызывает:
 
 ```c
 void main() {     void F() {       void F() {       void F() { 
@@ -149,7 +153,7 @@ void main() {     void F() {       void F() {       void F() {
 
 На самом деле этот эффект воспроизводится в компьютере. Однако копируется при этом не весь текст функции (не вся функция), а только ее части, связанные с локальными данными (формальные, фактические параметры, локальные переменные и точка возврата). Алгоритмическая часть (операторы, выражения) рекурсивной функции и глобальные переменные не меняются, поэтому они присутствуют в памяти компьютера в единственном экземпляре.
 
-Рекурсивная функция и стек. Каждый рекурсивный вызов порождает новый «экземпляр» формальных параметров и локальных переменных, причем старый «экземпляр» не уничтожается, а сохраняется в стеке по принципу вложенности. Здесь имеет место единственный случай, когда одному имени переменной в процессе работы программы соответствуют несколько ее экземпляров. Происходит это в такой последовательности:
+**Рекурсивная функция и стек**. Каждый рекурсивный вызов порождает новый «экземпляр» формальных параметров и локальных переменных, причем старый «экземпляр» не уничтожается, а сохраняется в стеке по принципу вложенности. Здесь имеет место единственный случай, когда одному имени переменной в процессе работы программы соответствуют несколько ее экземпляров. Происходит это в такой последовательности:
 
 - в стеке резервируется место для формальных параметров, в которые записываются значения фактических параметров. Обычно это производится в порядке, обратном их следованию в списке;
 
@@ -161,7 +165,7 @@ void main() {     void F() {       void F() {       void F() {
 
 ## Рекуррентные соотношения
 
-Рекуррентные соотношения определяют некоторый элемент последовательности через несколько предыдущих. Например, числа Фибоначчи: F(n)=F(n-1)+F(n-2), где F(0)=1, F(1)=1. Если рассматривать этот ряд от младших членов к старшим, способ его построения задается итерационным циклическим алгоритмом.
+Рекуррентные соотношения определяют некоторый элемент последовательности через несколько предыдущих. Например, числа Фибоначчи: $F(n)=F(n-1)+F(n-2)$, где $F(0)=1$, $F(1)=1$. Если рассматривать этот ряд от младших членов к старшим, способ его построения задается итерационным циклическим алгоритмом.
 
 ```c
 //  Вычисление чисел Фибоначчи итерационным методом
@@ -190,17 +194,13 @@ int FIBO(int n) {
 
 ## Трудоемкость рекурсивных алгоритмов
 
-Трудоемкость – это зависимость времени выполнения алгоритма от размерности входных данных. В рекурсивных функциях размерность входных данных определяет глубину  рекурсии. Если имеется ветвящаяся рекурсия – цикл из m повторений, то при глубине рекурсии N общее количество рекурсивных вызовов будет порядка Nm, поскольку с каждым шагом рекурсии оно увеличивается в m раз. Показательный характер функции говорит о том, что трудоемкость рекурсивных алгоритмов значительно превышает трудоемкость известных нам алгоритмов сортировки и поиска. Для различных случаев рекурсивных алгоритмов, когда задача размерности n сводится к задаче меньшей размерности (обычно n/2 или n-1) и при этом содержит определенное количество операций, кратное текущей размерности 1 или n, результирующие значения трудоемкости несложно оценить.
+Трудоемкость – это зависимость времени выполнения алгоритма от размерности входных данных. В рекурсивных функциях размерность входных данных определяет глубину  рекурсии. Если имеется ветвящаяся рекурсия – цикл из $m$ повторений, то при глубине рекурсии $N$ общее количество рекурсивных вызовов будет порядка $N^m$, поскольку с каждым шагом рекурсии оно увеличивается в $m$ раз. Показательный характер функции говорит о том, что трудоемкость рекурсивных алгоритмов значительно превышает трудоемкость известных нам алгоритмов сортировки и поиска. Для различных случаев рекурсивных алгоритмов, когда задача размерности $n$ сводится к задаче меньшей размерности (обычно $n/2$ или $n-1$) и при этом содержит определенное количество операций, кратное текущей размерности $1$ или $n$, результирующие значения трудоемкости несложно оценить.
 
-|    | Размерность | Изменение размерности задачи | Трудоемкость |
-|----|-------------|------------------------------|--------------|
-| 1  | TN=NTN-1 +N | не каждом шаге рекурсии возникает N задач размерности, меньшей на 1, на каждом шаге число выполняемых операций пропорционально размерности задачи. | T=N! |
-| 1  | TN=TN-1 +N  | с каждым шагом рекурсии размерность задачи уменьшается на 1, на каждом шаге число выполняемых операций пропорционально размерности задачи. | T=N2/2 |
-| 2  | TN=TN/2 + 1 | с каждым шагом рекурсии размерность задачи уменьшается в два раза при выполнении единственной на этом шаге операции | T=log2N |
-| 3  | TN=TN/2 + N | с каждым шагом рекурсии размерность задачи уменьшается в два раза, число операций на каждом шаге пропорционально размерности задачи. Общая трудоемкость | T=2N |
-| 4  | TN=2TN/2+N  | с каждым шагом рекурсии задача разбивается на две, размерность которых в два раза меньше исходной, число операций на каждом шаге пропорционально размерности задачи| T=Nlog2N |
-| 5  | TN=2TN/2+1  | с каждым шагом рекурсии задача разбивается на две, размерность которых в два раза меньше исходной, при выполнении единственной на этом шаге операции. | T=2N |
-
- 
-
- 
+|    | Размерность        | Изменение размерности задачи | Трудоемкость |
+|----|--------------------|------------------------------|--------------|
+| 1  | $T_N=NT_{N-1} + N$ | не каждом шаге рекурсии возникает N задач размерности, меньшей на 1, на каждом шаге число выполняемых операций пропорционально размерности задачи. | $T=N!$ |
+| 1  | $T_N=T_{N-1} + N$  | с каждым шагом рекурсии размерность задачи уменьшается на 1, на каждом шаге число выполняемых операций пропорционально размерности задачи. | $T=N^2/2$ |
+| 2  | $T_N=T_{N/2} + 1$  | с каждым шагом рекурсии размерность задачи уменьшается в два раза при выполнении единственной на этом шаге операции | $T=log_2 N$ |
+| 3  | $T_N=T_{N/2} + N$  | с каждым шагом рекурсии размерность задачи уменьшается в два раза, число операций на каждом шаге пропорционально размерности задачи. Общая трудоемкость | $T=2N$ |
+| 4  | $T_N=2T_{N/2} + N$ | с каждым шагом рекурсии задача разбивается на две, размерность которых в два раза меньше исходной, число операций на каждом шаге пропорционально размерности задачи| $T=N log_2 N$ |
+| 5  | $T_N=2T_{N/2} + 1$ | с каждым шагом рекурсии задача разбивается на две, размерность которых в два раза меньше исходной, при выполнении единственной на этом шаге операции. | $T=2N$ |
