feat: content/index change metaTitle

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Главная"
-metaTitle: "Главная"
+metaTitle: "Си/Си++. От дилетанта до профессионала"
 metaDescription: "CPROG - о программировании вообще, в том числе на Си/Си++"
 ---
 
