feat: add code highlighting for inline code

--- a/content/book/4/4.1.md
+++ b/content/book/4/4.1.md
@@ -36,7 +36,7 @@ metaDescription: "4.1. Трудоемкость программ"
 
 Из общего ряда выпадает единичная трудоемкость T(N) = >O(1), т.е. фиксированная, не зависящая от размерности данных. Она встречается среди простых действий, например, извлечение элемента массива. В более сложных случаях единичная трудоемкость является «чудом», которое может иметь скрытый подвох. Например, средняя трудоемкость размещения и поиска данных методом хеширования Tср близка к единице, в то же время максимальная Tmax является линейной;
 
-Обычный цикл вида `for(i=0;i<N;i++)` дает линейную трудоемкость вида $T(N)=N \Rightarrow O(N)$. Вложенный (двойной) цикл вида `for(i=0;i<N;i++)for(j=0;j<N;j++)` дает квадратичную трудоемкость $T(N)=N2 \Rightarrow O(N^2)$. В то же время для цикла `for(i=0;i<N;i++) for(j=i+1;j<N;j++)` трудоемкость приближенно можно оценить $T(N)≈ \frac{N^2}{2} \Rightarrow O(N2)$. Для этого можно привлечь графическую интерпретацию: в каждом цикле индекс «перемещается» по независимой координате, поэтому «пройденной» оказывается половина квадрата («влияние» диагонали `i=j` при этом игнорируется, поэтому оценка оказывается приближенной). Само собой, $m$-кратный вложенный цикл имеет оценку трудоемкости $O(N^m)$.
+Обычный цикл вида `c±for(i=0;i<N;i++)` дает линейную трудоемкость вида $T(N)=N \Rightarrow O(N)$. Вложенный (двойной) цикл вида `c±for(i=0;i<N;i++)for(j=0;j<N;j++)` дает квадратичную трудоемкость $T(N)=N2 \Rightarrow O(N^2)$. В то же время для цикла `c±for(i=0;i<N;i++) for(j=i+1;j<N;j++)` трудоемкость приближенно можно оценить $T(N)≈ \frac{N^2}{2} \Rightarrow O(N2)$. Для этого можно привлечь графическую интерпретацию: в каждом цикле индекс «перемещается» по независимой координате, поэтому «пройденной» оказывается половина квадрата («влияние» диагонали `c±i=j` при этом игнорируется, поэтому оценка оказывается приближенной). Само собой, $m$-кратный вложенный цикл имеет оценку трудоемкости $O(N^m)$.
 
 ![Рис. 41.2. Графическая интерпретация трудоемкости двойного цикла и рекурсии.](./assets/041-02.jpg)
 
