feat: change extension from .md to .mdx

--- a/content/book/4/4.1.mdx
+++ b/content/book/4/4.1.mdx
@@ -5,11 +5,14 @@ metaDescription: "4.1. Трудоемкость программ"
 ---
 
 <pre>
-«Для решения любой сколь угодно простой задачи<br/> 
-можно написать программу, которая будет работать<br/> 
-сколь угодно медленно».<br/>
-<br/>
-<b>Афоризм, рожденный из практики приема курсовых работ.</b><br/>
+  <p
+    className="wrap"
+    children={
+      "«Для решения любой сколь угодно простой задачи можно написать программу, которая будет работать сколь угодно медленно»."
+    }
+  />
+  <br />
+  <b>Афоризм, рожденный из практики приема курсовых работ.</b>
 </pre>
 
 Скорость выполнения программы (или производительность) зависят от многих факторов: языка программирования, способа реализации транслятора (компилятор, интерпретатор), производительности процессора. Поэтому заранее оценить производительность еще не написанной программы сложно. Наша задача скромнее. Для уже разработанного алгоритма и написанной программы оценить перспективы ее использования с различными объемами данных. Для этого и вводится понятие трудоемкости.
